--- a/cpp/cmake/demo/CMakeLists.txt
+++ b/cpp/cmake/demo/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.10) # 指定cmake的最低版本要求
 project(MyProject) # 定义项目名称
-add_executable(demo main.cpp) # 添加可执行文件，指定源文件为main.cpp
+add_executable(demo main.cc) # 添加可执行文件，指定源文件为main.cpp
