--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,8 @@ repos:
     rev: 5.0.4
     hooks:
     -   id: flake8
+        args:
+        - --ignore=E203,E501
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.1.5
     hooks:
